## Source directory

noinst_LIBRARIES= librf.a
librf_a_SOURCES = librf.h random_forest.h tree.h types.h tree_node.h instance_set.h weights.h discrete_dist.h utils.h random_forest.cc instance_set.cc discrete_dist.cc tree.cc tree_node.cc weights.cc

INCLUDES = -I$(top_srcdir)
#CXXFLAGS = -ggdb
CXXFLAGS = -O2 -DNDEBUG
